[gd_scene load_steps=10 format=3 uid="uid://bhcf2pa40j7ph"]

[ext_resource type="Texture2D" uid="uid://8tr38o2q00ip" path="res://Assets/craftpix-net-865357-free-pixel-citizens-for-top-down-tower-defense/1/S_Idle.png" id="1_1iue6"]
[ext_resource type="Script" path="res://Enemy/citizen_enemy.gd" id="1_rvt0j"]
[ext_resource type="PackedScene" uid="uid://cu4jgwl0oakgw" path="res://bullet_hell/bullet.tscn" id="2_acylj"]
[ext_resource type="Texture2D" uid="uid://cd7tpp73iedba" path="res://Assets/free-pixel-art-enemy-spaceship-2d-sprites/PNG_Parts&Spriter_Animation/Shots/Shot3/shot3_exp2.png" id="3_f6bgq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wlcyy"]
atlas = ExtResource("1_1iue6")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_urrfo"]
atlas = ExtResource("1_1iue6")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfxbh"]
atlas = ExtResource("1_1iue6")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_imxkl"]
atlas = ExtResource("1_1iue6")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_44pn6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlcyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urrfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfxbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imxkl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Citizen_enemy" type="Node2D"]
script = ExtResource("1_rvt0j")
bullet_scene = ExtResource("2_acylj")
bullet_sprite = ExtResource("3_f6bgq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_44pn6")
autoplay = "default"
frame_progress = 0.766079

[node name="Timer" type="Timer" parent="."]

[node name="Rotetor_cont" type="Node2D" parent="."]

[node name="Rotator_bullets" type="Node2D" parent="Rotetor_cont"]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
